...
            android:textColor="@color/design_default_color_surface"
            android:textIsSelectable="false"
            android:textSize="28sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_firstname_text_UserProfileCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/design_default_color_surface"
            android:hint="@string/enter_your_firstname"
            android:lines="1"
...
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="40dp"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/input_surname_text_UserProfileCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/design_default_color_surface"
            android:hint="@string/enter_your_surname"
            android:lines="1"
...
                android:layout_marginRight="5dp"
                android:background="@color/design_default_color_surface"
                android:text="@string/empty_date_view"
                android:textSize="30dp" />

            <Button
                android:id="@+id/selectDate_button_userProfileCreation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/select_a_date" />

        </LinearLayout>
...
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/setPersonalInfo_button_userProfileCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="@string/validate"
            android:textSize="40sp" />
    </LinearLayout>
...
