...
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/input_userName_text_UserProfileCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/design_default_color_surface"
            android:hint="@string/user_name"
            android:lines="1"
...
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/setUserName_button_userProfileCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Validate"
            android:textSize="40sp" />
    </LinearLayout>
...
