<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".login.RegisterActions">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ET_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/ET_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/BT_RegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register with Email" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="OR"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/BT_RegisterGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/fui_ic_googleg_color_24dp"
            android:text="Register With Google" />

        <Button
            android:id="@+id/BT_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="I already have an account" />

        <Button
            android:id="@+id/BT_RegisterAnonymous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Continue without an account" />

    </LinearLayout>

</FrameLayout>