<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActions">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ET_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/ET_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/BT_LoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login with Email" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="OR"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/BT_LoginGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/fui_ic_googleg_color_24dp"
            android:text="Login With Google" />

        <Button
            android:id="@+id/BT_Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="I don't have an account" />

    </LinearLayout>

</FrameLayout>