...
            android:id="@+id/SP_Header"
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/TXT_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="DrawYourPath"
            android:textAlignment="center"
            android:textSize="32dp" />


        <TextView
            android:id="@+id/TXT_Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Choose a way to login"
            android:textAlignment="center" />

        <Space
...
